# cutelystforms

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.obs/: workflows.yml
.reuse/: dep5
Forms/: CMakeLists.txt  CutelystQtForms.pc.in  button.cpp  button.h  button_p.h  checkboxinput.cpp  checkboxinput.h  checkboxinput_p.h  colorinput.cpp  colorinput.h  colorinput_p.h  dateinput.cpp  dateinput.h  dateinput_p.h  datetimelocalinput.cpp  datetimelocalinput.h  datetimelocalinput_p.h  emailinput.cpp  emailinput.h  emailinput_p.h  field.cpp  field.h  field_p.h  fieldset.cpp  fieldset.h  fieldset_p.h  fileinput.cpp  fileinput.h  fileinput_p.h  form.cpp  form.h  form_p.h  formhtmlelement.cpp  formhtmlelement.h  formhtmlelement_p.h  forms.cpp  forms.h  forms_p.h  hiddeninput.cpp  hiddeninput.h  (+57 more)
Forms/imports/de/huessenbergnetz/cutelystforms/: CMakeLists.txt  plugin.json.license  qmlcutelystformsplugin.cpp  qmldir.in
Forms/imports/org/cutelyst/forms/: CMakeLists.txt  qmlcutelystformsplugin.cpp
cmake/modules/: CutelystForms-config.cmake.in
dox/: DoxygenLayout.xml
templates/cutelee/bootstrap5/cutelystforms/: CMakeLists.txt  field.html  fieldwithlabel.html  input.html  inputwithlabel.html  select.html  selectwithlabel.html  textarea.html  textareawithlabel.html
tests/: CMakeLists.txt  coverageobject.cpp  coverageobject.h  testforms.cpp
tests/data/: MyForm.qml  MyForm.qml.in
tests/data/l10n/: formtests.de.ts  formtests.de.ts.license  formtests.en.ts
