# SPDX-FileCopyrightText: (C) 2023-2025 Matthias Fehring <https://www.huessenbergnetz.de>
# SPDX-License-Identifier: BSD-3-Clause

# get qmake location and query some Qt installation paths for later use
get_property(QMAKE_EXE_PATH TARGET Qt${QT_VERSION_MAJOR}::qmake PROPERTY LOCATION)

execute_process(COMMAND ${QMAKE_EXE_PATH} -query QT_INSTALL_QML RESULT_VARIABLE QMAKE_RESULT OUTPUT_VARIABLE QT_INSTALL_QML OUTPUT_STRIP_TRAILING_WHITESPACE)
if (QMAKE_RESULT)
    message(FATAL_ERROR "Failed to use qmake to query QT_INSTALL_QML")
endif (QMAKE_RESULT)

set(QMLPLUGIN_URI de.huessenbergnetz.cutelyst${CUTELYST_VERSION_MAJOR}forms)
set(QMLPLUGIN_VERSION 1.0)

string(REPLACE "." "/" QMLPLUGIN_INSTALL_URI ${QMLPLUGIN_URI})

set(QMLPLUGIN_OUTPUT_DIR ${CMAKE_BINARY_DIR}/Forms/imports/${QMLPLUGIN_INSTALL_URI})

qt_add_qml_module(Cutelyst${CUTELYST_VERSION_MAJOR}Qt${QT_VERSION_MAJOR}Forms
    URI ${QMLPLUGIN_URI}
    VERSION ${QMLPLUGIN_VERSION}
    CLASS_NAME QmlCutelystFormsPlugin
    PLUGIN_TARGET Cutelyst${CUTELYST_VERSION_MAJOR}Qt${QT_VERSION_MAJOR}FormsQml
    TYPEINFO Cutelyst${CUTELYST_VERSION_MAJOR}Qt${QT_VERSION_MAJOR}FormsQml.qmltypes
    OUTPUT_DIRECTORY ${QMLPLUGIN_OUTPUT_DIR}
)

### Install library
install(TARGETS Cutelyst${CUTELYST_VERSION_MAJOR}Qt${QT_VERSION_MAJOR}FormsQml
    DESTINATION ${QT_INSTALL_QML}/${QMLPLUGIN_INSTALL_URI}
)

### Install additional files
install(FILES
    ${QMLPLUGIN_OUTPUT_DIR}/qmldir
    ${QMLPLUGIN_OUTPUT_DIR}/Cutelyst${CUTELYST_VERSION_MAJOR}Qt${QT_VERSION_MAJOR}FormsQml.qmltypes
    DESTINATION ${QT_INSTALL_QML}/${QMLPLUGIN_INSTALL_URI}
)
